# dbx-benchmarking

./: .gitignore  README.md  bench_cluster_dbx_parquet.py  bench_cluster_dbx_parquet.result.txt  bench_cluster_dbx_unity_catalog.py  bench_cluster_dbx_unity_catalog.result.txt  bench_cluster_sql_custom.py  bench_cluster_sql_delta_table.py  bench_cluster_sql_delta_table.result.txt  bench_cluster_sql_new_table.py  bench_cluster_sql_new_table.result.txt  bench_warehouse_sql_download.py  bench_warehouse_sql_download.result.txt  bench_warehouse_sql_materialize.py  bench_warehouse_sql_materialize.result.txt  configuration.py  inspect_resources.py  pyproject.toml  update_readme.py
benchmarks/: cluster_dbx_parquet.py  warehouse_sql_download.py  warehouse_sql_materialize.py
data/: assignments.parquet
results/: bench_cluster_dbx_parquet.txt  bench_cluster_dbx_unity_catalog.txt  bench_cluster_sql_delta_table.txt  bench_cluster_sql_new_table.txt  bench_warehouse_sql_materialize.txt  cluster_dbx_parquet.txt  cluster_dbx_unity_catalog.txt  cluster_sql_delta_table.txt  cluster_sql_new_table.txt  warehouse_sql_download.txt  warehouse_sql_materialize.txt
scripts/: update_readme.py
